Bug #22269
ceph-fuse: failure to remount in startup test does not handle client_die_on_failed_remount properly
% Done:
0%
Source:
Development
Tags:
Backport:
luminous,jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Client, ceph-fuse
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
The Client should call ceph_abort() like it does here:
We should also add debug information to help diagnose why the remount failed.
Related issues
History
#1 Updated by Patrick Donnelly about 5 years ago
- Status changed from New to Fix Under Review
#2 Updated by Patrick Donnelly about 5 years ago
- Backport changed from luminous to luminous,jewel
#3 Updated by Patrick Donnelly about 5 years ago
- Status changed from Fix Under Review to Pending Backport
#5 Updated by Nathan Cutler about 5 years ago
- Copied to Backport #22378: jewel: ceph-fuse: failure to remount in startup test does not handle client_die_on_failed_remount properly added
#7 Updated by Nathan Cutler about 5 years ago
- Copied to Backport #22339: luminous: ceph-fuse: failure to remount in startup test does not handle client_die_on_failed_remount properly added
#8 Updated by Nathan Cutler over 4 years ago
- Status changed from Pending Backport to Resolved