client: quit on failed remount during dentry invalidate test

Fixes: http://tracker.ceph.com/issues/22269

Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>